Changed a bit of the API plus cleaned up a lot but the current version is not in a usable state